Fix use of undefined variable

--- a/templates/restic.service.j2
+++ b/templates/restic.service.j2
@@ -2,7 +2,7 @@
 Description=Backup local repositories to remote host
 
 [Service]
-Environment=RESTIC_REPOSITORY=sftp://{{ restic_remote_user }}@{{ restic_host }}:{{ restic_path }}
+Environment=RESTIC_REPOSITORY=sftp://{{ restic_remote_user }}@{{ restic_host }}:{{ restic_remote_path }}
 Environment=RESTIC_PASSPHRASE={{ restic_passphrase }}
 User={{ restic_local_user }}
 {% for path in restic_local_paths %}
