--- a/templates/restic.service.j2
+++ b/templates/restic.service.j2
@@ -2,6 +2,7 @@
 Description=Backup local repositories to remote host
 
 [Service]
+Type=oneshot
 Environment=RESTIC_REPOSITORY=sftp:{{ restic_remote_user }}@{{ restic_host }}:{{ restic_remote_path }}
 Environment=RESTIC_PASSWORD={{ restic_password }}
 User={{ restic_local_user }}
