--- a/templates/restic.timer.j2
+++ b/templates/restic.timer.j2
@@ -4,3 +4,6 @@ Description=Periodically backup local data to remote host
 [Timer]
 OnCalendar=*-*-* 04:00:00
 RandomizedDelaySec=3600
+
+[Install]
+WantedBy=timers.target
